assets/css/style.css
/* ... */
.reviews-container {
  background-color: #fafafb;
  opacity: 0.8;
  height: 60rem;
  width: 80%;
  position: absolute;
  top: 0;
  right: 0;
  left: 0;
  bottom: 0;
  margin: auto;
  border-radius: 10px;
  box-shadow: 10px 10px 5px #181822;
  z-index: 100;
  color: #181822;
}
.reviewers-list {
  list-style: none;
  display: flex;
  flex-direction: column;
  width: 80%;
  height: 40%;
  position: absolute;
  bottom: 2.5%;
  margin-left: 10%;
}
.reviewer {
  display: flex;
  padding: 4% 0;
  transition: all 1s ease-in-out;
  width: 100%;

  border-radius: 2rem;
}
.reviewer:hover {
  transform: scale(1.1);
}
.reviewer-image {
  position: relative;
  height: 4rem;
  width: 4rem;
  overflow: hidden;
  border-radius: 50%;
}
.reviewer img {
  width: 100%;
  height: auto;
}
.reviewer h2 {
  padding-left: 1rem;
  font-size: 3.25vw;
}
.reviews {
  width: 100%;
  position: absolute;
  height: auto;
  top: 10%;
  text-align: center;
}
.reviews h2 {
  font-size: 5.5vw;
}
.reviews i,
.reviews p {
  padding: 2rem 1rem 0rem 1rem;
  font-size: 3.75vw;
}
.hidden {
  display: none;
}
.active {
  box-shadow: 10px 10px 5px #181822;
}
/* Media Querys*/

@media (min-width: 576px) {
  header,
  .hero-img,
  .right-gradient,
  .hero-img::before {
    height: 100vh;
  }
  .logo a {
    font-size: 3vw;
  }
  .heading {
    left: 7.5%;
  }
  .heading h1 {
    font-size: 9vw;
  }
  .heading a {
    font-size: 2.5vw;
  }
  .heading p {
    font-size: 2.5vw;
  }
  .about-col {
    height: 40vh;
  }
  /*
  .social-media {
    top: 45%;
    right: 10%;
  }
  .social-media-links i {
    font-size: 4vw;
  }*/
  /*
  .about-col {
    height: ;
  }*/
  .about-text h1,
  .reviews-heading {
    font-size: 5vw;
  }
  .about-text h1 {
    margin-left: 3%;
  }
  .about-text p {
    font-size: 2.5vw;
  }

  .city-destinations-title h1,
  .beach-destinations-title h1,
  .destination-heading h1 {
    font-size: 4vw;
  }
  .reviews-row {
    height: 55rem;
  }
  .reviews-container {
    height: 35rem;
  }
  .reviewers-list {
    width: 30%;

    top: 10%;
    margin-left: 2.5%;
  }
  .reviewer {
    padding: 3rem 0;
    margin-left: 1%;
  }

  .reviewer-image {
    height: 3rem;
    width: 3rem;
  }

  .reviewer h2 {
    font-size: 1.75vw;
  }
  .reviews {
    width: 60%;
    right: 0;
    top: 50%;
    transform: translateY(-50%);
  }
  .reviews h2 {
    font-size: 3vw;
  }
  .reviews i,
  .reviews p {
    padding: 3rem 1rem 0rem 1rem;
    font-size: 2vw;
  }
}
@media only screen and (min-width: 576px) and (max-width: 992px) and (orientation: landscape) {
  /*.social-media-links i {
    font-size: 1.8rem;
    margin-top: 5rem;
  }*/
  .heading {
    top: 15%;
  }
  .heading h1 {
    font-size: 6vw;
  }
  .heading p {
    font-size: 1.5vw;
  }
  .about-col {
    height: 100vh;
  }
  .navigation-link {
    font-size: 2vw;
  }

  /*
  #destinations {
    height: 250vh;
  }
  .city-destinations-slider,
  .beach-destinations-slider {
    height: 100vh;
  }
  .card {
    height: 32rem;
    width: 21rem;
  }*/
  /*
  .reviews-row {
    height: 40rem;
  }
  .reviews-container {
    height: 60%;
  }
  .reviewers-list {
    width: 30%;
    top: 5%;
    left: 0;
    margin-left: 1rem;
  }
  .reviewer {
    padding: 3rem 0;

    width: 100%;
    height: 20%;
    margin-left: 2vw;
  }

  .reviewer-image {
    height: 3rem;
    width: 3rem;
  }

  .reviewer h2 {
    font-size: 1.75vw;
  }
  .reviews {
    width: 60%;
    right: 0;
  }
  .reviews h2 {
    font-size: 3vw;
  }
  .reviews i,
  .reviews p {
    padding: 3rem 1rem 0rem 1rem;
    font-size: 2vw;
  }*/
}
@media (min-width: 720px) {
  .logo a {
    font-size: 1.5vw;
  }
  .navigation-link {
    font-size: 2.5vw;
  }
  .heading h1 {
    font-size: 8vw;
  } /*
  .heading p {
    font-size: 1.5vw;
  }*/
  /*
  .heading a {
    width: 40rem;
    font-size: 2vw;
  }/
  .social-media {
    top: 30%;
    right: 7.5%;
  }
  .social-media-links i {
    font-size: 2.5rem;
    margin-top: 10rem;
  }*/
  .about-text p {
    font-size: 1.75vw;
  }
}
/*
  .reviews-heading {
    font-size: 5.5vw;
  }
  .reviews h2 {
    font-size: 3vw;
  }
  .reviews i,
  .reviews p {
    padding: 3rem 1rem 0rem 1rem;
    font-size: 2vw;
  }
  .reviewer {
    padding: 2rem 0;

    height: 6.5rem;
    margin-left: 2vw;
  }
  .reviewer-image {
    height: 6rem;
    width: 6rem;
  }

  .reviewer h2 {
    padding-left: 1rem;
    font-size: 1vw;
  }
  */
#destinations {
  height: 95rem;
}
.destination-heading-section {
  height: 15rem;
}
.cities-row,
.beaches-row {
  height: 40rem;
}
.card {
  height: 28rem;
  width: 20rem;
}

@media (min-width: 992px) {
  .heading a {
    width: 40rem;
    font-size: 2vw;
  }
  #destinations {
    height: 100rem;
  }
  .destination-heading-section {
    height: 20rem;
  }

  .reviews-row {
    height: 90rem;
  }
  .reviews-container {
    height: 60%;
  }
  .reviewers-list {
    top: 25%;
  }
  .reviewer-image {
    height: 5rem;
    width: 5rem;
  }
  .reviewer {
    padding: 5% 0;
    margin-left: 1%;
  }
}
@media (min-width: 1200px) {
  .heading h1 {
    font-size: 5.5vw;
  }
  .heading p {
    font-size: 1.5vw;
  }
  .heading a {
    width: 30rem;
    font-size: 1.25vw;
  }

  .about-col {
    height: 50vh;
  }
  .about-text h1,
  .reviews-heading {
    font-size: 3vw;
  }
  .about-text p {
    font-size: 1vw;
  }
  .reviewer-image {
    height: 7rem;
    width: 7rem;
  }
}
@media (min-width: 1450px) {
    #destinations {
  height: 130rem;
}
.destination-heading-section {
  height: 30rem;
}
.cities-row,
.beaches-row {
  height: 50rem;
}
.card {
  height: 36rem;
  width: 24rem;
}
  .reviews-container {
    height: 70%;
  }

  .reviews h2 {
    font-size: 2.5vw;
  }
  .reviews i,
  .reviews p {
    font-size: 1.5vw;
  }

  .reviewer h2 {
    padding-left: 1rem;
    font-size: 0.75vw;
  }
}

